kontakta oss och arbeta hos oss är gjorda och även lite små förändringar

--- a/design.css
+++ b/design.css
@@ -35,3 +35,10 @@ h1 small{
 #mappar{
     padding-top: 30px; 
 }
+.JobbTitel{
+    font-size: 18px;
+    margin-bottom: 3px;
+}
+#asd{
+    margin-top: 10px;
+}
