--- a/design.css
+++ b/design.css
@@ -32,13 +32,14 @@ h1 small{
 #jumbotronPadding{
     padding-bottom: 20px;
 }
-#mappar{
-    padding-top: 30px; 
-}
 .JobbTitel{
     font-size: 18px;
     margin-bottom: 3px;
 }
 #asd{
     margin-top: 10px;
+}
+.img-responsive{
+    height: auto;
+    width: 100%;
 }
