--- a/design.css
+++ b/design.css
@@ -22,6 +22,7 @@ body{
 }
 .jumbotron{
     color: #102169;
+    padding: 30px;
 }
 h1 small{
     color: #000;
@@ -49,7 +50,6 @@ h1 small{
 .img-size{
     height: 70%;
     width: 70%;
-        
 }
 .kategoriStorlek{
     font-size: 20px;
